# HW_Lesson_2

./: CMakeLists.txt  Makefile  build.ninja  func.cpp  func.hpp  main.cpp
